Package_Tools/include-C/gsl/in_arbeit/fertig/gsl_matrix_uchar.pp

(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_matrix_uchar_get(m:Pgsl_matrix_uchar; i:Tsize_t; j:Tsize_t):byte;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure gsl_matrix_uchar_set(m:Pgsl_matrix_uchar; i:Tsize_t; j:Tsize_t; x:byte);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_matrix_uchar_ptr(m:Pgsl_matrix_uchar; i:Tsize_t; j:Tsize_t):Pbyte;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_matrix_uchar_const_ptr(m:Pgsl_matrix_uchar; i:Tsize_t; j:Tsize_t):Pbyte;cdecl;external;
{$endif}
{ __GSL_MATRIX_UCHAR_H__  }

implementation


end.
